--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,6 @@ input{
     padding: 3px;
     padding-left:10px;
     display: inline-block
-    
 }
 
 input:hover{
@@ -63,3 +62,23 @@ a:hover {
     color: #273447;
 }
 
+li {
+    margin: auto;
+    list-style-type: none;
+}
+
+div {
+    user-select: none;
+}
+
+footer {
+    user-select: none;
+}
+
+button {
+    border-radius: 4px;
+    background-color: #0d1117;
+    color: aliceblue;
+    outline: none;
+    border: 2px aliceblue solid;
+}
